core/nginx-gateway/gatewayclass.yaml
---
# Source: nginx-gateway-fabric/templates/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nginx
  labels:
    helm.sh/chart: nginx-gateway-fabric-1.5.0
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/instance: nginx-gateway
    app.kubernetes.io/version: "1.5.0"
    app.kubernetes.io/managed-by: Helm
spec:
  controllerName: gateway.nginx.org/nginx-gateway-controller
