core/nginx-gateway/deployment.yaml
---
# Source: nginx-gateway-fabric/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
  labels:
    helm.sh/chart: nginx-gateway-fabric-1.5.0
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/instance: nginx-gateway
    app.kubernetes.io/version: "1.5.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-gateway-fabric
      app.kubernetes.io/instance: nginx-gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-gateway-fabric
        app.kubernetes.io/instance: nginx-gateway
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
    spec:
      containers:
        - args:
            - static-mode
            - --gateway-ctlr-name=gateway.nginx.org/nginx-gateway-controller
            - --gatewayclass=nginx
            - --config=nginx-gateway-config
            - --service=nginx-gateway
            - --metrics-port=9113
            - --health-port=8081
            - --leader-election-lock-name=nginx-gateway-leader-election
            - --gateway-api-experimental-features
            - --snippets-filters
          image: ghcr.io/nginxinc/nginx-gateway-fabric:1.5.0
          resources: {}
          imagePullPolicy: IfNotPresent
          name: nginx-gateway
          ports:
            - name: metrics
              containerPort: 9113
            - name: health
              containerPort: 8081
          readinessProbe:
            httpGet:
              path: /readyz
              port: health
            initialDelaySeconds: 3
            periodSeconds: 1
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - KILL
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsUser: 102
            runAsGroup: 1001
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
            - name: nginx-stream-conf
              mountPath: /etc/nginx/stream-conf.d
            - name: nginx-main-includes
              mountPath: /etc/nginx/main-includes
            - name: nginx-secrets
              mountPath: /etc/nginx/secrets
            - name: nginx-run
              mountPath: /var/run/nginx
            - name: nginx-includes
              mountPath: /etc/nginx/includes
        - image: ghcr.io/nginxinc/nginx-gateway-fabric/nginx:1.5.0
          resources: {}
          imagePullPolicy: IfNotPresent
          name: nginx
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 1001
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
            - name: nginx-stream-conf
              mountPath: /etc/nginx/stream-conf.d
            - name: nginx-main-includes
              mountPath: /etc/nginx/main-includes
            - name: nginx-secrets
              mountPath: /etc/nginx/secrets
            - name: nginx-run
              mountPath: /var/run/nginx
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-includes
              mountPath: /etc/nginx/includes
      terminationGracePeriodSeconds: 30
      serviceAccountName: nginx-gateway
      shareProcessNamespace: true
      securityContext:
        fsGroup: 1001
        runAsNonRoot: true
      volumes:
        - name: nginx-conf
          emptyDir: {}
        - name: nginx-stream-conf
          emptyDir: {}
        - name: nginx-main-includes
          emptyDir: {}
        - name: nginx-secrets
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-includes
          emptyDir: {}
        - name: nginx-includes-bootstrap
          configMap:
            name: nginx-includes-bootstrap
