core/nginx-gateway/service.yaml
---
# Source: nginx-gateway-fabric/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
  annotations:
    metallb.universe.tf/loadbalcerIPs: 172.16.1.153
  labels:
    helm.sh/chart: nginx-gateway-fabric-1.5.0
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/instance: nginx-gateway
    app.kubernetes.io/version: "1.5.0"
    app.kubernetes.io/managed-by: Helm
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/instance: nginx-gateway
  ports: # Update the following ports to match your Gateway Listener ports
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
