core/nginx-gateway/shared-8none1-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-8none1-gateway
  annotations:
    cert-manager.io/cluster-issuer: internal
    external-dns.alpha.kubernetes.io/controller: none
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      port: 80
      protocol: HTTP

    # - name: https-home-base
    #   # Important: The hostname needs to be set to your domain
    #   hostname: "home.8none1.com"
    #   port: 443
    #   protocol: HTTPS
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - kind: Secret
    #         name: shared-home-8none1-secret

    # - name: https-home
    #   # Important: The hostname needs to be set to your domain
    #   hostname: "*.home.8none1.com"
    #   port: 443
    #   protocol: HTTPS
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - kind: Secret
    #         name: shared-home-8none1-secret

    - name: https-lab-base
      # Important: The hostname needs to be set to your domain
      hostname: "lab.8none1.com"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: shared-lab-8none1-secret

    - name: https-lab
      # Important: The hostname needs to be set to your domain
      hostname: "*.lab.8none1.com"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: shared-lab-8none1-secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
spec:
  parentRefs:
    - name: shared-8none1-gateway
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
